# korai-sdk-py

./: Makefile  README.md  openapi-python-client.yaml  pyproject.toml
examples/: quickstart.py
src/korai/: __init__.py  _client.py  _errors.py  _sync.py  session.py
src/korai/_generated/: __init__.py
src/korai/_generated/api/anonymous/: create_anonymous_chat_completion.py  create_anonymous_checkout.py  issue_anonymous_batch.py  issue_anonymous_free_batch.py  list_anonymous_subscriptions.py  list_anonymous_tiers.py  peek_anonymous_tranche.py
src/korai/_generated/api/auth/: create_api_key.py  create_worker_token.py  delete_api_key.py  delete_worker_token.py  get_current_user.py  list_api_keys.py  list_worker_tokens.py  login.py  signup.py  update_current_user.py
src/korai/_generated/api/billing/: create_checkout.py  get_balance.py  list_packages.py  list_transactions.py  stripe_webhook.py
src/korai/_generated/api/fleet/: get_fleet_manifest.py  get_fleet_stats.py
src/korai/_generated/api/host/: get_host_stats.py  get_host_usage.py  get_worker_schedule.py  put_worker_schedule.py
src/korai/_generated/api/inference/: count_tokens.py  create_chat_completion.py  list_models.py
src/korai/_generated/api/system/: get_health.py  get_metrics.py
src/korai/_generated/models/: __init__.py  anonymous_chat_request.py  anonymous_subscription.py  anonymous_subscription_status.py  anonymous_tier.py  api_key.py  auth_result.py  chat_completion.py  chat_completion_choices_item.py  chat_completion_choices_item_finish_reason.py  chat_completion_chunk.py  chat_completion_chunk_attribution.py  chat_completion_chunk_choices_item.py  chat_completion_chunk_choices_item_delta.py  chat_completion_chunk_choices_item_finish_reason_type_1.py  chat_completion_chunk_choices_item_finish_reason_type_2_type_1.py  chat_completion_chunk_choices_item_finish_reason_type_3_type_1.py  chat_completion_chunk_error.py  chat_completion_request.py  chat_message.py  count_tokens_request.py  create_anonymous_checkout_body.py  create_anonymous_checkout_response_200.py  create_api_key_body.py  create_api_key_response_201.py  create_checkout_body.py  create_checkout_response_200.py  create_worker_token_body.py  create_worker_token_response_201.py  credit_package.py  delete_api_key_response_200.py  delete_worker_token_response_200.py  error.py  error_error_type_0.py  fleet_api_tier.py  fleet_api_tier_provider.py  fleet_api_tier_required_tier.py  fleet_manifest.py  fleet_manifest_api_tiers.py  fleet_manifest_models.py  (+54 more)
src/korai/audit/: __init__.py
src/korai/auth/: __init__.py
src/korai/billing/: __init__.py
src/korai/fleet/: __init__.py
src/korai/llm/: __init__.py
src/korai/rag/: __init__.py
src/korai/tenant/: __init__.py
src/korai/tools/: __init__.py
tests/: conftest.py  test_audit.py  test_auth.py  test_billing.py  test_client.py  test_env_config.py  test_errors.py  test_llm.py  test_mcp.py  test_model_visibility.py  test_rag.py  test_request_raw.py  test_retry.py  test_session.py  test_stream_collect.py  test_sync.py  test_tenant.py  test_tool_runner.py  test_tools.py  test_with_options.py
(+5 files in other folders)
