[project]
name = "korai"
version = "0.2.0"
description = "Korai Platform SDK for Python — build apps on Korai (auth, multi-tenant, RAG, audit, tools, billing)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Korai SA", email = "support@korai.one" }]
keywords = ["korai", "ai", "llm", "privacy", "verticale", "saas", "fiduciaire", "swiss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "anyio>=4.0.0",
    # Required by the generated transport core (src/korai/_generated,
    # produced by openapi-python-client from specs/openapi.yaml).
    "attrs>=24.0.0",
]
# Note: we intentionally don't depend on pyjwt[crypto]. The SDK only
# needs base64url-decoding of unverified JWT claims (handled in
# `korai.auth.decode_jwt_unverified`); signature verification stays on
# the orchestrator. Pulling the `cryptography` wheel transitively
# would add ~3 MB and a Rust toolchain dependency for no benefit here.

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.0"]
sqlalchemy = ["sqlalchemy[asyncio]>=2.0.36", "pgvector>=0.3.6", "aiosqlite>=0.20.0"]
embeddings = ["sentence-transformers>=3.3.0"]
all = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pgvector>=0.3.6",
    "aiosqlite>=0.20.0",
    "sentence-transformers>=3.3.0",
]
# Dev needs respx (httpx mocks) and the sqlalchemy extra so audit/RAG
# tests can run against an in-memory SQLite database.
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://korai.one"
Documentation = "https://docs.korai.one/sdk-python"
# Published mirror (read-only). Source of truth: the korai-one/korai monorepo.
Repository = "https://github.com/korai-one/korai-sdk-py"
Issues = "https://github.com/korai-one/korai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/korai"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# Pytest config — asyncio_mode=auto so plain async def tests run without
# the @pytest.mark.asyncio decorator. Coverage is gated on the src/
# package only.
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=korai",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src/korai"]
omit = ["src/korai/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
